# pokaico

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  SPEC.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
.agents/skills/code-review/: SKILL.md
agent/: package.json  tsconfig.json  vitest.config.ts
agent/python/: download_model.py  embed.py  fake_embed.cjs  fake_embed_crash.cjs  fake_embed_hang.cjs  fake_embed_silent.cjs  requirements.txt
agent/src/: config.ts  index.ts  ipc.ts
agent/tests/: backend-e2e.smoke.test.ts  compactor.test.ts  config.test.ts  conversation.test.ts  db.test.ts  diary.test.ts  edges.test.ts  embeddings.int.test.ts  extract.test.ts  foundational.test.ts  guards.test.ts  health.test.ts  ipc.test.ts  journal.test.ts  mastra.test.ts  memory-e2e.smoke.test.ts  memory.test.ts  model.test.ts  mutex.test.ts  pipeline.smoke.test.ts  pipeline.test.ts  prompt.test.ts  provider.test.ts  reindexer.test.ts  retrieval.test.ts  search.test.ts  service.test.ts  similarity.test.ts  summarizer.test.ts  tokens.test.ts  writer.test.ts
docs/pr/: tone.md
mockup/sprite/: DESIGN_LANGUAGE.md
public/emoji/: pineapple
src/: App.tsx  emoji-map.json  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  sidecar_wrapper.rs
src/components/: ChatWindow.tsx  LeftSidebar.tsx  MarkdownRenderer.tsx  MemoryGraph.tsx  ProceduralSpriteCanvas.tsx  RightSidebar.tsx  SettingsPanel.tsx  ShroomSprite.tsx
src/styles/: index.css
src/utils/: emoji.tsx
(+51 files in other folders)
